<resources>
    <string name="app_name">PiTrainer</string>
    <string name="banner_ad">Banner Ad</string>
    <string name="interstitial_ad">Interstitial Ad</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_load">Load Interstitial</string>
    <string name="interstitial_not_ready">Interstitial Not Ready</string>
    <string name="interstitial_loading">Loading Interstitial</string>
    <string name="interstitial_show">Show Interstitial</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="pi_trainer_title">Pi Trainer</string>
    <string name="train">Train</string>
    <string name="marathon">Marathon</string>
    <string name="memorize">Memorize</string>
    <string name="about">About</string>
    <string name="about_paragraph">Pi Trainer is an application that allows you to memorize digits
        of the irrational number pi. \n\n

        In Marathon Mode, you enter the digits of pi, but if you enter one of the digits
        incorrectly, you will have to start over. In the Trainer Mode, entering an incorrect digit
        does not push you back to start. In the Memorize section, you can look through the digits
        of pi.
    </string>
    <string name="high_score_title">High Score: </string>
    <string name="count_title">Count: </string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimal">.</string>
    <string name="memorize_title">10,000 Digits of Pi: </string>
    <string name="facebook_app_id">131420023671393</string>
</resources>