<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:gravity="bottom"
    android:paddingLeft="0dp"
    android:paddingBottom="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp">

    <EditText
        android:id="@+id/editTextPi"
        android:layout_width="fill_parent"
        android:layout_height="50dip" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button7"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button" >
        </Button>

        <Button
            android:id="@+id/button8"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button" >
        </Button>

        <Button
            android:id="@+id/button9"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button4"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/four"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button" >
        </Button>

        <Button
            android:id="@+id/button5"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/five"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button" >
        </Button>

        <Button
            android:id="@+id/button6"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/six"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button" >
        </Button>

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/two"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button" >
        </Button>

        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button0"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button">
        </Button>

        <Button
            android:id="@+id/buttonDecimal"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/decimal"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button">
        </Button>

        <Button
            android:id="@+id/buttonEmpty"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text=""
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button" >
        </Button>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewHighScoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/high_score_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/textViewHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewCountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewCurrentDigit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adMarathon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:adSize="BANNER">
    </com.google.android.gms.ads.AdView>

</LinearLayout>